Feat: [BE] 운행 종료시 ShuttleDriveHistory 운행 정보 저장 기능 구현
S10P31A405-296